v2.5.0
- Keymap function
- Auto select IP service
- Improved wizard function, particularly for User Defined
- New cert for hideme (it might work now)
- NordVPN update (yet again.....)
- VPN Unlimited servers updated

v2.4.3
- Another ExpressVPN update to really fix the problem
- ibVPN and Torguard fixes for OpenVPN 2.4.0

v2.4.2
- ExpressVPN update
- VyprVPN update to add servers, levels of encryption and work with OpenVPN 2.4.0
- IPVanish update to work with OpenVPN 2.4.0

v2.4.1
- IPVanish update

v2.4.0
- User Defined import wizard
- Better VPN reset behaviour
- Improved error logging
- Fix ovpn import bug
- Fix bug displaying all profiles on a new install

v2.3.1
- Allow ovpn with key and cert to be supplied rather than individual key and cert files
- Improve key and cert selection
- VPN Unlimited goes from single key/cert to multiple key/certs in an attempt to fix support

v2.3.0
- Windscribe support
- Smart DNS Proxy support
- Update PureVPN servers

v2.2.9
- Another attempt to fix default up script generation...
- Alternative running task detection option for certain flavours of Linux

v2.2.8
- Fix default up script generation bug

v2.2.7
- Fix default up script (still off by default)

v2.2.6
- Make checking for ovpn parameters less aggressive

v2.2.5
- Fix display enhanced info
- Update PIA server list
- Add default up script (off by default)

v2.2.4
- Add support for up and down scripts

v2.2.3
- Upgrade NordVPN again

v2.2.2
- Update ExpressVPN
Improve remote.xml example to use special paths

v2.2.1
- Fix upgrade bug

v2.2.0
- Update Celo and Nord profiles

v2.1.1
- Fix IVPN

v2.1.0
- Added connect and disconnect API accessable via a script

v2.0.3
- Fix HMA again

v2.0.2
- User Defined upgrade fix
- Hide/show password
- HMA cert update

v2.0.1
- Systemd bug fix

v2.0.0
- Updated IPVanish with many more servers

v1.9.0
- Added SecureVPN
- Updated NordVPN (again...), LimeVPN and ExpressVPN

v1.8.2
- block-outside-dns is Windows only

v1.8.1