@@ -1,62 +1,62 @@
-Austria (TCP),1-at.cg-dialup.net,tcp,443,#REMOVE=2
-Austria (UDP),1-at.cg-dialup.net,udp,443,#REMOVE=1
-Australia (TCP),1-au.cg-dialup.net,tcp,443,#REMOVE=2
-Australia (UDP),1-au.cg-dialup.net,udp,443,#REMOVE=1
-Belgium (TCP),1-be.cg-dialup.net,tcp,443,#REMOVE=2
-Belgium (UDP),1-be.cg-dialup.net,udp,443,#REMOVE=1
-Canada (TCP),1-ca.cg-dialup.net,tcp,443,#REMOVE=2
-Canada (UDP),1-ca.cg-dialup.net,udp,443,#REMOVE=1
-Switzerland Premium (TCP),1-ch.cg-dialup.net,tcp,443,#REMOVE=2
-Switzerland Premium (UDP),1-ch.cg-dialup.net,udp,443,#REMOVE=1
-Switzerland Standard (TCP),9-ch.cg-dialup.net,tcp,443,#REMOVE=2
-Switzerland Standard (UDP) ,9-ch.cg-dialup.net,udp,443,#REMOVE=1
-Czech Republic (TCP),4-cz.cg-dialup.net,tcp,443,#REMOVE=2
-Czech Republic (UDP),4-cz.cg-dialup.net,udp,443,#REMOVE=1
-Germany (TCP),4-de.cg-dialup.net,tcp,443,#REMOVE=2
-Germany (UDP),4-de.cg-dialup.net,udp,443,#REMOVE=1
-Denmark (TCP),1-dk.cg-dialup.net,tcp,443,#REMOVE=2
-Denmark (UDP),1-dk.cg-dialup.net,udp,443,#REMOVE=1
-Spain (TCP),1-es.cg-dialup.net,tcp,443,#REMOVE=2
-Spain (UDP),1-es.cg-dialup.net,udp,443,#REMOVE=1
-Finland (TCP),1-fi.cg-dialup.net,tcp,443,#REMOVE=2
-Finland (UDP),1-fi.cg-dialup.net,udp,443,#REMOVE=1
-France (TCP),1-fr.cg-dialup.net,tcp,443,#REMOVE=2
-France (UDP),1-fr.cg-dialup.net,udp,443,#REMOVE=1
-Hong Kong (TCP),1-hk.cg-dialup.net,tcp,443,#REMOVE=2
-Hong Kong (UDP),1-hk.cg-dialup.net,udp,443,#REMOVE=1
-Hungary (TCP),1-hu.cg-dialup.net,tcp,443,#REMOVE=2
-Hungary (UDP),1-hu.cg-dialup.net,udp,443,#REMOVE=1
-Ireland (TCP),1-ie.cg-dialup.net,tcp,443,#REMOVE=2
-Ireland (UDP),1-ie.cg-dialup.net,udp,443,#REMOVE=1
-Israel (TCP),1-il.cg-dialup.net,tcp,443,#REMOVE=2
-Israel (UDP),1-il.cg-dialup.net,udp,443,#REMOVE=1
-Italy (TCP),1-it.cg-dialup.net,tcp,443,#REMOVE=2
-Italy (UDP),1-it.cg-dialup.net,udp,443,#REMOVE=1
-Japan (TCP),1-jp.cg-dialup.net,tcp,443,#REMOVE=2
-Japan (UDP),1-jp.cg-dialup.net,udp,443,#REMOVE=1
-Lithuania (TCP),1-lt.cg-dialup.net,tcp,443,#REMOVE=2
-Lithuania (UDP),1-lt.cg-dialup.net,udp,443,#REMOVE=1
-Luxembourg (TCP),1-lu.cg-dialup.net,tcp,443,#REMOVE=2
-Luxembourg (UDP),1-lu.cg-dialup.net,udp,443,#REMOVE=1
-Mexico (TCP),1-mx.cg-dialup.net,tcp,443,#REMOVE=2
-Mexico (UDP),1-mx.cg-dialup.net,udp,443,#REMOVE=1
-Netherlands (TCP),5-nl.cg-dialup.net,tcp,443,#REMOVE=2
-Netherlands (UDP),5-nl.cg-dialup.net,udp,443,#REMOVE=1
-Norway (TCP),1-no.cg-dialup.net,tcp,443,#REMOVE=2
-Norway (UDP),1-no.cg-dialup.net,udp,443,#REMOVE=1
-Poland (TCP),1-pl.cg-dialup.net,tcp,443,#REMOVE=2
-Poland (UDP),1-pl.cg-dialup.net,udp,443,#REMOVE=1
-Romania (TCP),4-ro.cg-dialup.net,tcp,443,#REMOVE=2
-Romania (UDP),4-ro.cg-dialup.net,udp,443,#REMOVE=1
-Sweden (TCP),1-se.cg-dialup.net,tcp,443,#REMOVE=2
-Sweden (UDP),1-se.cg-dialup.net,udp,443,#REMOVE=1
-Singapore (TCP),1-sg.cg-dialup.net,tcp,443,#REMOVE=2
-Singapore (UDP),1-sg.cg-dialup.net,udp,443,#REMOVE=1
-Ukraine (TCP),1-ua.cg-dialup.net,tcp,443,#REMOVE=2
-Ukraine (UDP),1-ua.cg-dialup.net,udp,443,#REMOVE=1
-United Kingdom Premium (TCP),1-gb.cg-dialup.net,tcp,443,#REMOVE=2
-United Kingdom Premium (UDP),1-gb.cg-dialup.net,udp,443,#REMOVE=1
-United Kingdom Standard (TCP),11-gb.cg-dialup.net,tcp,443,#REMOVE=2
-United Kingdom Standard (UDP),11-gb.cg-dialup.net,udp,443,#REMOVE=1
-United States (TCP),4-us.cg-dialup.net,tcp,443,#REMOVE=2
-United States (UDP),4-us.cg-dialup.net,udp,443,#REMOVE=1
+Austria (TCP),1-at.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Austria (UDP),1-at.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Australia (TCP),1-au.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Australia (UDP),1-au.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Belgium (TCP),1-be.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Belgium (UDP),1-be.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Canada (TCP),1-ca.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Canada (UDP),1-ca.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Switzerland Premium (TCP),1-ch.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Switzerland Premium (UDP),1-ch.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Switzerland Standard (TCP),9-ch.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Switzerland Standard (UDP) ,9-ch.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Czech Republic (TCP),4-cz.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Czech Republic (UDP),4-cz.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Germany (TCP),4-de.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Germany (UDP),4-de.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Denmark (TCP),1-dk.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Denmark (UDP),1-dk.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Spain (TCP),1-es.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Spain (UDP),1-es.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Finland (TCP),1-fi.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Finland (UDP),1-fi.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+France (TCP),1-fr.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+France (UDP),1-fr.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Hong Kong (TCP),1-hk.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Hong Kong (UDP),1-hk.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Hungary (TCP),1-hu.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Hungary (UDP),1-hu.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Ireland (TCP),1-ie.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Ireland (UDP),1-ie.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Israel (TCP),1-il.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Israel (UDP),1-il.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Italy (TCP),1-it.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Italy (UDP),1-it.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Japan (TCP),1-jp.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Japan (UDP),1-jp.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Lithuania (TCP),1-lt.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Lithuania (UDP),1-lt.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Luxembourg (TCP),1-lu.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Luxembourg (UDP),1-lu.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Mexico (TCP),1-mx.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Mexico (UDP),1-mx.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Netherlands (TCP),5-nl.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Netherlands (UDP),5-nl.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Norway (TCP),1-no.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Norway (UDP),1-no.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Poland (TCP),1-pl.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Poland (UDP),1-pl.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Romania (TCP),4-ro.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Romania (UDP),4-ro.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Sweden (TCP),1-se.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Sweden (UDP),1-se.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Singapore (TCP),1-sg.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Singapore (UDP),1-sg.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+Ukraine (TCP),1-ua.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+Ukraine (UDP),1-ua.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+United Kingdom Premium (TCP),1-gb.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+United Kingdom Premium (UDP),1-gb.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+United Kingdom Standard (TCP),11-gb.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+United Kingdom Standard (UDP),11-gb.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
+United States (TCP),4-us.cg-dialup.net,tcp,443,#REMOVE=1 #PINGSPEED=15 #PINGEXIT=90
+United States (UDP),4-us.cg-dialup.net,udp,443,#PINGSPEED=5 #PINGEXIT=60
