@@ -114,12 +114,13 @@
         <setting label="32161" type="text" visible="eq(-5,0)" enable="false"/>
         <setting label="32162" type="bool" id="up_down_script" default="true"/>
         <setting label="32163" type="bool" id="use_default_up_down" visible="eq(-7,2)|eq(-7,3)" enable="true" default="false"/>
-        <setting label="32164" type="bool" id="openvpn_log_location" default="false"/>
+        <setting label="32164"   type="bool" id="force_ping" visible="true" default="true"/>
+        <setting label="32165" type="bool" id="openvpn_log_location" default="false"/>
         <setting label=""      type="lsep"/>
-        <setting label="32165" type="lsep"/>
-        <setting label="32166" type="bool" id="vpn_system_menu_item" default="false"/>
-        <setting label="32167" type="action" enable="false" visible="false" action="RunScript(special://home/addons/service.vpn.manager/infopopup.py, sysinfo)"/>
-        <setting label="32168" type="labelenum" id="ip_info_source" lvalues="32169|32170|32171|32172"/>
+        <setting label="32166" type="lsep"/>
+        <setting label="32167" type="bool" id="vpn_system_menu_item" default="false"/>
+        <setting label="32168" type="action" enable="false" visible="false" action="RunScript(special://home/addons/service.vpn.manager/infopopup.py, sysinfo)"/>
+        <setting label="32169" type="labelenum" id="ip_info_source" lvalues="32170|32171|32172|32173"/>
         <setting label=""      type="text" id="vpn_provider_validated" enable="false" visible="false" default=""/>
         <setting label=""      type="text" id="vpn_username_validated" enable="false" visible="false" default=""/>
         <setting label=""      type="text" id="vpn_password_validated" enable="false" visible="false" default=""/>
